[package]
name = "cursive-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.18.0"
cursive_hexview = "0.7"
log = "0.4.17"
flexi_logger = "0.22"
cursive-flexi-logger-view = "^0"
rand = "0.8.5"
